<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/survey_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible">

    <Button
        android:id="@+id/button2"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_marginStart="128dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="96dp"
        android:onClick="onClickSkip"
        android:text="@string/button_skip"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/fragment_home"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/home_mood"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="28dp"
        android:onClick="onClickSave"
        android:text="@string/button_save"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.922"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        style="@android:style/Widget.DeviceDefault.Spinner"
        android:layout_width="203dp"
        android:layout_height="60dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="245dp"
        android:entries="@array/mood_arrays"
        android:prompt="@string/dropdown"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.095" />


</androidx.constraintlayout.widget.ConstraintLayout>